--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
@@ -22,25 +22,25 @@
 							<div id="jenisTerapiDasar">
 								<table width="100%" height="100%" class="tabel_tanpa_jeda">
 									<tr>
-										<td width="100%" onclick="javascript:terapi(1)">Belajar</td>
+										<td width="100%" id="dasarTerapi1" onclick="javascript:terapi(1)">Belajar</td>
 									</tr>
 									<tr>
-										<td width="100%" onclick="javascript:terapi(2)">Identifikasi(1)</td>
+										<td width="100%" id="dasarTerapi2" onclick="javascript:terapi(2)">Identifikasi(1)</td>
 									</tr>
 									<tr>
-										<td width="100%" onclick="javascript:terapi(3)">Identifikasi(2)</td>
+										<td width="100%" id="dasarTerapi3" onclick="javascript:terapi(3)">Identifikasi(2)</td>
 									</tr>
 									<tr>
-										<td width="100%" onclick="javascript:terapi(4)">Melabel</td>
+										<td width="100%" id="dasarTerapi4" onclick="javascript:terapi(4)">Melabel</td>
 									</tr>
 									<tr>
-										<td width="100%" onclick="javascript:terapi(5)">Matching</td>
+										<td width="100%" id="dasarTerapi5" onclick="javascript:terapi(5)">Matching</td>
 									</tr>
 									<tr>
-										<td width="100%" onclick="javascript:terapi(6)">Imitasi GM Kasar</td>
+										<td width="100%" id="dasarTerapi6" onclick="javascript:terapi(6)">Imitasi GM Kasar</td>
 									</tr>
 									<tr>
-										<td width="100%" onclick="javascript:terapi(7)">Imitasi GM Halus</td>
+										<td width="100%" id="dasarTerapi7" onclick="javascript:terapi(7)">Imitasi GM Halus</td>
 									</tr>
 								</table>
 							</div>
