--- a/www/daftar.html
+++ b/www/daftar.html
@@ -7,7 +7,6 @@
 	<script src="js/jQuery-2.1.3.min.js"></script>
 	<script src="js/flowtype.js"></script>
 	<script src="js/services.js"></script>
-	<script src="js/jQuery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="js/isiterapi.js"></script>
 	<script type="text/javascript" src="js/querycakra.js"></script>
 	<script src="js/app.js"></script>
@@ -36,6 +35,7 @@
 				isiTahun += '<option value="' + i + '">' + i + '</option>';
 			}
 			document.getElementById('tah').innerHTML = isiTahun;
+			RunBody();
 		}
 		function takePhotos () {
 			document.getElementById('takePhotos').click();
