--- a/www/halaman_utama/diagnosa.html
+++ b/www/halaman_utama/diagnosa.html
@@ -5,10 +5,12 @@
   <title>Dynamic JS Quiz</title>
   <link rel="stylesheet" href="../css/diagnosa.css">
   <script src="../js/jQuery-2.1.3.min.js"></script>
+  <script type="text/javascript" src="../js/isiterapi.js"></script>
+  <script type="text/javascript" src="../js/querycakra.js"></script>
 	<script src="../js/flowtype.js"></script>
 </head>
 
-<body>
+<body onload="RunBody()">
 	<table id="container">
     <tr>
       <td colspan="2" height="20%"></td>
