--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarBelajarAngka 1-20.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarBelajarAngka 1-20.html
@@ -9,29 +9,31 @@
             var tmpColCheck = document.getElementById( ele ).style.backgroundColor;
             
 
-              if (tmpColCheck === 'black') {
-                document.getElementById( ele ).style.backgroundColor = 'rgba(0,0,0,0)';
-              } else {
+            if (tmpColCheck === 'black') {
+            	document.getElementById( ele ).style.backgroundColor = 'rgba(0,0,0,0)';
+            } else {
                 document.getElementById( ele ).style.backgroundColor = col;
-              }
-            } 
+            }
+        } 
             
-            setInterval(function() {
-            	//alert('coba');
-                flashtext('flashingtext','black');
-            }, 1000 ); //set an interval timer up to repeat the function
+        setInterval(function() {
+        	//alert('coba');
+            flashtext('flashingtext','black');
+        }, 1000 ); //set an interval timer up to repeat the function
 
+        function skip () {
+        	window.location.href = "DasarBelajarAngka%201-20.html";
+        }
 	</script>
 </head>
 <body class="halamanPetunjukTerapi">
 	<table border="0" width="100%" height="100%">
 	  <tr>
-	    <td align="center" height="70%" width="60%" colspan="3" id="gambarmain" style="background-image: url('../../../../img/Informasi/melabel.png');">
+	    <td align="center" height="70%" width="60%" colspan="3" id="gambarmain" style="background-image: url('../../../../img/Informasi/belajar.png');">
 	    </td>
 	    <td height="70%" width="40%" id="keteranganTerapi">
-	    	Modul terapi menjawab pertanyaan. <br>
-			Pengguna akan melihat suatu gambar/teks dan perintah suara, diharapkan pengguna dapat menjawab dengan berbicara.<br>
-			Jika berhasil menjawab pendamping harus menekan tombol 'Ya', jika tidak, harus menekan 'Tidak' untuk memberikan feedback.
+	    	Modul terapi belajar pengenalan lingkungan sekitar. <br>
+			Pengguna hanya akan mendengarkan informasi yang ada dan diharapkan dapat menirukan ejaannya.
 	    </td>
 	  </tr>
 	  <tr>
@@ -43,7 +45,7 @@
 	  <tr>
 	    <td height="8%" colspan="3"> </td>
 	    <td height="8%" align="right">
-	    	<div id="flashingtext">SKIP >></div>
+	    	<div id="flashingtext" onclick="javascript:skip();">SKIP >></div>
 	    </td>
 	  </tr>
 	</table>
