--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarIdentifikasi(1)Huruf Kecil.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarIdentifikasi(1)Huruf Kecil.html
@@ -8,11 +8,12 @@
 		function flashtext(ele,col) {
             var tmpColCheck = document.getElementById( ele ).style.backgroundColor;
             
-        	if (tmpColCheck === 'black') {
-            	document.getElementById( ele ).style.backgroundColor = 'rgba(0,0,0,0)';
-          	} else {
-            	document.getElementById( ele ).style.backgroundColor = col;
-          	}
+
+            if (tmpColCheck === 'black') {
+                document.getElementById( ele ).style.backgroundColor = 'rgba(0,0,0,0)';
+            } else {
+                document.getElementById( ele ).style.backgroundColor = col;
+            }
         } 
             
         setInterval(function() {
@@ -21,19 +22,19 @@
         }, 1000 ); //set an interval timer up to repeat the function
 
         function skip () {
-        	window.location.href = "";
+        	window.location.href = "DasarIdentifikasi(1)Huruf%20Kecil.html";
         }
 	</script>
 </head>
 <body class="halamanPetunjukTerapi">
 	<table border="0" width="100%" height="100%">
 	  <tr>
-	    <td align="center" height="70%" width="60%" colspan="3" id="gambarmain" style="background-image: url('../../../../img/Informasi/imitasi.png');">
+	    <td align="center" height="70%" width="60%" colspan="3" id="gambarmain" style="background-image: url('../../../../img/Informasi/identifikasi.png');">
 	    </td>
 	    <td height="70%" width="40%" id="keteranganTerapi">
-	    	Modul terapi menjawab pertanyaan. <br>
-			Pengguna akan melihat suatu video gearkan seseorang dan diharapkan pengguna dapat menirukan gerakannya.<br>
-			Jika berhasil menirukan, pendamping harus menekan tombol 'Ya', jika tidak harus menekan tombol 'Tidak'.
+	    	Modul terapi belajar pengenalan lingkungan sekitar. <br>
+			Pengguna akan melihat suatu gambar dan perintah suara, diharapkan pengguna dapat menekan tombol proton dengan benar sesuai perintah.<br>
+			Pendamping dapat mengganti jumlah tombol proton dan modul resource yang digunakan dengan menu yang berada di atas layar.
 	    </td>
 	  </tr>
 	  <tr>
@@ -50,7 +51,8 @@
 	  </tr>
 	</table>
 	<script type="text/javascript">
-		$('#keteranganTerapi').flowtype({fontRatio:29});
+		$('#keteranganTerapi').flowtype({fontRatio:17});
+		$('.keteranganPanahPetunjukTerapi1').flowtype({fontRatio:10});
 		$('#flashingtext').flowtype({fontRatio:6});
 	</script>		
 </body>
