--- a/www/index.html
+++ b/www/index.html
@@ -126,7 +126,7 @@
 	}
 	</script>
 </head>
-<body>
+<body onload="RunBody()">
 	<table width="100%" border="0" align="center" height="100%" id="halamanMenu" class="halamanLogin">
 		<tr id="konten">
 			<td colspan="8" height="75%">
