--- a/www/halaman_utama/kategori.html
+++ b/www/halaman_utama/kategori.html
@@ -5,8 +5,11 @@
 	<script src="../js/jQuery-2.1.3.min.js"></script>
 	<script src="../js/flowtype.js"></script>
 	<script type="text/javascript">
-		function keHalamanLevel() () {
-			window.location.href = "level.html";
+		function keHalamanLevel() {
+			window.location.href = "halaman_terapi/level.html";
+		}
+		function keHalamanTerapiTerstruktur(){
+			window.location.href = "halaman_terapi/terapi_terstruktur.html";
 		}
 	</script>
 </head>
