--- a/www/halaman_utama/halaman_laporan/bulanan.html
+++ b/www/halaman_utama/halaman_laporan/bulanan.html
@@ -16,85 +16,19 @@
 	</script>
 	<script src="../../js/jQuery-2.1.3.min.js"></script>
 	<script src="../../js/Chart.min.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(function () {
-	        /* ChartJS
-	         * -------
-	         * Here we will create a few charts using ChartJS
-	         */
-
-	        // Get context with jQuery - using jQuery's .get() method.
-	        
-	        var areaChartData = {
-	          labels: ["komunikasi", "sosial", "kognitif", "kebiasaan"],
-	          datasets: [
-	            {
-	              label: "komunikasi",
-	              fillColor: "rgb(136,160,185)",
-	              strokeColor: "#ffffff",
-	              pointColor: "#000000",
-	              pointStrokeColor: "rgba(60,141,188,1)",
-	              pointHighlightFill: "#ffffff",
-	              pointHighlightStroke: "rgba(255,255,255,1)",
-	              data: [28,30,72,90]
-	            }
-	          ]
-	        };
-
-	        //-------------
-	        //- BAR CHART -
-	        //-------------
-	        var barChartCanvas = $("#barChart").get(0).getContext("2d");
-	        var barChart = new Chart(barChartCanvas);
-	        var barChartData = areaChartData;
-	        /*ngganti warna
-	        barChartData.datasets[0].fillColor = "#00a65a";
-	        barChartData.datasets[0].strokeColor = "#00a65a";
-	        barChartData.datasets[0].pointColor = "#00a65a";
-	        */
-	        var barChartOptions = {
-	          //Boolean - Whether the scale should start at zero, or an order of magnitude down from the lowest value
-	          scaleBeginAtZero: true,
-	          //Boolean - Whether grid lines are shown across the chart
-	          scaleShowGridLines: true,
-	          //String - Colour of the grid lines
-	          scaleGridLineColor: "rgba(0,0,0,.05)",
-	          //Number - Width of the grid lines
-	          scaleGridLineWidth: 1,
-	          //Boolean - Whether to show horizontal lines (except X axis)
-	          scaleShowHorizontalLines: true,
-	          //Boolean - Whether to show vertical lines (except Y axis)
-	          scaleShowVerticalLines: true,
-	          //Boolean - If there is a stroke on each bar
-	          barShowStroke: true,
-	          //Number - Pixel width of the bar stroke
-	          barStrokeWidth: 2,
-	          //Number - Spacing between each of the X value sets
-	          barValueSpacing: 5,
-	          //Number - Spacing between data sets within X values
-	          barDatasetSpacing: 1,
-	          //String - A legend template
-	          legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<datasets.length; i++){%><li><span style=\"background-color:<%=datasets[i].fillColor%>\"></span><%if(datasets[i].label){%><%=datasets[i].label%><%}%></li><%}%></ul>",
-	          //Boolean - whether to make the chart responsive
-	          responsive: true,
-	          maintainAspectRatio: false
-	        };
-
-	        barChartOptions.datasetFill = false;
-	        barChart.Bar(barChartData, barChartOptions);
-
-			});
-	</script>
+	<script type="text/javascript" src="../../js/isiterapi.js"></script>
+	<script type="text/javascript" src="../../js/querycakra.js"></script>
+	
 </head>
-<body class="halamanLaporan">
+<body class="halamanLaporan" onload="displayBulan()">
 	<table width="90%" height="90%" align="center">
 		<tr>
 			<td align="left" width="15%" height="20%" valign="middle">
 				Month
 			</td>
 			<td align="left" width="25%" height="20%" valign="middle">
-				<select name="tanggalLaporanBulanan" class="inputData opsiPengaturan">
-					<option>06/15</option>
+				<select id="pilihbulan" name="tanggalLaporanBulanan" class="inputData opsiPengaturan">
+					<option></option>
 				</select>
 			</td>
 			<td align="right" width="53%" height="20%" valign="middle">
