--- a/www/halaman_utama/halaman_laporan/total.html
+++ b/www/halaman_utama/halaman_laporan/total.html
@@ -15,87 +15,11 @@
 	</script>
 	<script src="../../js/jQuery-2.1.3.min.js"></script>
 	<script src="../../js/Chart.min.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(function () {
-	        /* ChartJS
-	         * -------
-	         * Here we will create a few charts using ChartJS
-	         */
+	<script type="text/javascript" src="../../js/isiterapi.js"></script>
+	<script type="text/javascript" src="../../js/querycakra.js"></script>
 
-	        //--------------
-	        //- AREA CHART -
-	        //--------------
-
-	        // Get context with jQuery - using jQuery's .get() method.
-	        
-	        var areaChartData = {
-	          labels: ["January", "February", "March", "April", "May", "June", "July"],
-	          datasets: [
-	            {
-	              label: "Digital Goods",
-	              fillColor: "#ffffff",
-	              strokeColor: "#ffffff",
-	              pointColor: "#000000",
-	              pointStrokeColor: "rgba(60,141,188,1)",
-	              pointHighlightFill: "#ffffff",
-	              pointHighlightStroke: "rgba(255,255,255,1)",
-	              data: [28, 48, 40, 19, 86, 27, 90]
-	            }
-	          ]
-	        };
-
-	        var areaChartOptions = {
-	          //Boolean - If we should show the scale at all
-	          showScale: true,
-	          //Boolean - Whether grid lines are shown across the chart
-	          scaleShowGridLines: false,
-	          //String - Colour of the grid lines
-	          scaleGridLineColor: "rgba(0,0,0,1)",
-	          //Number - Width of the grid lines
-	          scaleGridLineWidth: 1,
-	          //Boolean - Whether to show horizontal lines (except X axis)
-	          scaleShowHorizontalLines: true,
-	          //Boolean - Whether to show vertical lines (except Y axis)
-	          scaleShowVerticalLines: true,
-	          //Boolean - Whether the line is curved between points
-	          bezierCurve: false,
-	          //Number - Tension of the bezier curve between points
-	          bezierCurveTension: 0.3,
-	          //Boolean - Whether to show a dot for each point
-	          pointDot: true,
-	          //Number - Radius of each point dot in pixels
-	          pointDotRadius: 4,
-	          //Number - Pixel width of point dot stroke
-	          pointDotStrokeWidth: 1,
-	          //Number - amount extra to add to the radius to cater for hit detection outside the drawn point
-	          pointHitDetectionRadius: 20,
-	          //Boolean - Whether to show a stroke for datasets
-	          datasetStroke: true,
-	          //Number - Pixel width of dataset stroke
-	          datasetStrokeWidth: 2,
-	          //Boolean - Whether to fill the dataset with a color
-	          datasetFill: true,
-	          //String - A legend template
-	          legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<datasets.length; i++){%><li><span style=\"background-color:<%=datasets[i].lineColor%>\"></span><%if(datasets[i].label){%><%=datasets[i].label%><%}%></li><%}%></ul>",
-	          //Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
-	          maintainAspectRatio: false,
-	          //Boolean - whether to make the chart responsive to window resizing
-	          responsive: true
-	        };
-
-	        //Create the line chart
-	        //-------------
-	        //- LINE CHART -
-	        //--------------
-	        var lineChartCanvas = $("#lineChart").get(0).getContext("2d");
-	        var lineChart = new Chart(lineChartCanvas);
-	        var lineChartOptions = areaChartOptions;
-	        lineChartOptions.datasetFill = false;
-	        lineChart.Line(areaChartData, lineChartOptions);
-		});
-	</script>
 </head>
-<body class="halamanLaporan">
+<body class="halamanLaporan" onload="displayTotal()">
 	<table width="90%" height="90%" align="center">
 		<tr>
 			<td align="right" width="93%" height="20%" valign="middle">
