--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarWarna.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarWarna.html
@@ -1,6 +1,6 @@
 
 <audio id="suara" >
-  <source  src="../../../../suara/terapi/indo/Huruf/intro.mp3" type="audio/mpeg"> 
+  <source  src="../../../../suara/terapi/indo/Warna/intro.mp3" type="audio/mpeg"> 
   <script type="text/javascript"> document.getElementById("suara").play();</script>
 </audio>
 
@@ -18,7 +18,7 @@
   <title>Cakra</title>
 </head>
 
-<body class="huruf">
+<body>
   <div id="suara1x">
     <audio id="suara1" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 4000)" >
       <source id="suara1"  src="../../../../suara/terapi/indo/Ini.mp3" type="audio/mpeg">  
@@ -27,39 +27,41 @@
 
     <div id="suara2x">
       <audio id="suara2" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 5000)" >
-        <source id="suara2" src="../../../../suara/terapi/indo/Huruf/A.mp3" type="audio/mpeg">  
+        <source id="suara2" src="../../../../suara/terapi/indo/Warna/0.mp3" type="audio/mpeg">  
       </audio>
     </div>
 
     <div id="suara3x"> 
       <audio id="suara3" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 6000)" >
-        <source id="suara3" src="../../../../suara/terapi/indo/Huruf/A.mp3" type="audio/mpeg">
+        <source id="suara3" src="../../../../suara/terapi/indo/Warna/0.mp3" type="audio/mpeg">
       </audio>
     </div>
 
     <div id="suara4x">
       <audio id="suara4" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 7000)" >
-        <source id="suara4" src="../../../../suara/terapi/indo/Huruf/A.mp3" type="audio/mpeg">
+        <source id="suara4" src="../../../../suara/terapi/indo/Warna/0.mp3" type="audio/mpeg">
       </audio>
     </div>
     <table width="100%" height="100%" border="0" style="border-collapse:collapse;">
       <tr>
-        <td colspan="3" width="100%" height="90%" id="demo">
-          <!--<h1 id="demo" ></h1>-->
+        <td colspan="3" width="100%" height="90%">
+          <div style="width:20%;padding-bottom:20%;margin-left:40%;" id="demo">
+            <div>
+            </div>
+          </div>
           <script>
-            //var huruf = ["A", "B", "C"];
-            document.getElementById("demo").innerHTML = huruf[index];
+            //var Buah = ["A", "B", "C"];
+            document.getElementById('demo').style.backgroundColor = warna[index];
           </script>
         </td>
       </tr>
       <tr class="foot">
-        <td width="43%" height="10%" align="right"><button onclick="onclick_huruf1()">Sebelumnya</button></td>
+        <td width="43%" height="10%" align="right"><button onclick="onclick_warna1()">Sebelumnya</button></td>
         <td width="14%" height="10%"></td>
-        <td width="43%" height="10%" align="left"><button onclick="onclick_huruf2()">Setelahnya</button></td>
+        <td width="43%" height="10%" align="left"><button onclick="onclick_warna2()">Setelahnya</button></td>
       </tr>
     </table>
     <script type="text/javascript">
-      $('#demo').flowtype({fontRatio:2,maxFont:400});
       $('.foot td').flowtype({fontRatio:22});
     </script>
   </body>
