--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarAngka 1-20.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarAngka 1-20.html
@@ -59,8 +59,8 @@
       </tr>
     </table>
     <script type="text/javascript">
-      $('#demo').flowtype({fontRatio:2,maxFont:400});
-      $('.foot td').flowtype({fontRatio:22});
+      $('#demo').flowtype_height({fontRatio:2,maxFont:400});
+      $('.foot td').flowtype_height({fontRatio:22});
     </script>
   </body>
 </html>
