--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarBinatang.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarBinatang.html
@@ -62,7 +62,7 @@
       </tr>
     </table>
     <script type="text/javascript">
-      $('.foot td').flowtype({fontRatio:22});
+      $('.foot td').flowtype_height({fontRatio:22});
     </script>
   </body>
 </html>
