--- a/www/utama.html
+++ b/www/utama.html
@@ -75,7 +75,7 @@
 		                }
 		                else
 		                {
-		                	window.location.href = "halaman_laporan/laporan.html";
+		                	window.location.href = "halaman_utama/kategori.html";
 		              	}
 
 		              }
