--- a/www/halaman_utama/halaman_terapi/level.html
+++ b/www/halaman_utama/halaman_terapi/level.html
@@ -12,7 +12,7 @@
 				<table width="100%" height="100%" border="0">
 					<tr><td class="tandaLevel1"></td></tr>
 					<tr><td class="gambarLevel1"></td></tr>
-					<tr><td class="keteranganLevel">Tahap<br>Dasar</td></tr>
+					<tr><td class="keteranganLevel" onclick="javascript:window.location.href='halaman_freemode/dasar/listterapidasar.html'">Tahap<br>Dasar</td></tr>
 				</table>
 			</td>
 			<td class="level2">
