--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarMelabelBuah(1).html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarMelabelBuah(1).html
@@ -16,6 +16,8 @@
   <script src="../../../../cordova.js"></script>
   <script src="../../../../js/warna.js"></script>
   <script src="../../../../js/jQuery-2.1.3.min.js"></script>
+  <script type="text/javascript" src="../../../../js/isiterapi.js"></script>
+  <script type="text/javascript" src="../../../../js/querycakra.js"></script>
   <script src="../../../../js/flowtype.js"></script>
   <title>Cakra</title>
   <script type="text/javascript">
