--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarIdentifikasi(1)Binatang.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarIdentifikasi(1)Binatang.html
@@ -5,6 +5,10 @@
 	<script src="../../../../js/flowtype.js"></script>
 	<script type="text/javascript">
 
+		var bnr = parseInt(sessionStorage.getItem('benarsimpan'));
+    	var slh = parseInt(sessionStorage.getItem('salahsimpan'));
+    	var idp = parseInt(sessionStorage.getItem('idterapidasar'));
+
 		function flashtext(ele,col) {
             var tmpColCheck = document.getElementById( ele ).style.backgroundColor;
             
@@ -25,8 +29,10 @@
         	window.location.href = "DasarIdentifikasi(1)Binatang.html";
         }
 	</script>
+	<script type="text/javascript" src="../../../../js/isiterapi.js"></script>
+ 	<script type="text/javascript" src="../../../../js/querycakra.js"></script>
 </head>
-<body class="halamanPetunjukTerapi">
+<body class="halamanPetunjukTerapi" onload="persentase(bnr,slh,idp)">
 	<table border="0" width="100%" height="100%">
 	  <tr>
 	    <td align="center" height="70%" width="60%" colspan="3" id="gambarmain" style="background-image: url('../../../../img/Informasi/identifikasi.png');">
