--- a/www/index.html
+++ b/www/index.html
@@ -78,7 +78,7 @@
 	                row = result.rows.length;
 	                $('#jumlahakun').append(row +' Anak');
 	                if(row>0){
-	                  alert("Anda Telah Terdaftar di Aplikasi CAKRA");
+	                  alert("Edisi Bronze Hanya Tersedia untuk 1 User");
 	                }
 	                else{
 	                  window.location.href = "daftar.html";
