--- a/www/halaman_utama/halaman_terapi/level.html
+++ b/www/halaman_utama/halaman_terapi/level.html
@@ -8,21 +8,21 @@
 <body id="halamanKategori">
 	<table width="100%" height="100%" border="0" style="border-spacing:0px;">
 		<tr>
-			<td class="level1">
+			<td class="level1" onclick="javascript:window.location.href='halaman_freemode/dasar/listterapidasar.html'">
 				<table width="100%" height="100%" border="0">
 					<tr><td class="tandaLevel1"></td></tr>
 					<tr><td class="gambarLevel1"></td></tr>
-					<tr><td class="keteranganLevel" onclick="javascript:window.location.href='halaman_freemode/dasar/listterapidasar.html'">Tahap<br>Dasar</td></tr>
+					<tr><td class="keteranganLevel">Tahap<br>Dasar</td></tr>
 				</table>
 			</td>
-			<td class="level2">
+			<td class="level2" onclick="javascript:alert('Fitur ini tidak tersedia dalam Edisi Bronze')">
 				<table width="100%" height="100%" border="0">
 					<tr><td class="tandaLevel2"></td></tr>
 					<tr><td class="gambarLevel2"></td></tr>
 					<tr><td class="keteranganLevel">Tahap<br>Menengah</td></tr>
 				</table>
 			</td>
-			<td class="level3">
+			<td class="level3" onclick="javascript:alert('Fitur ini tidak tersedia dalam Edisi Bronze')">
 				<table width="100%" height="100%" border="0">
 					<tr><td class="tandaLevel3"></td></tr>
 					<tr><td class="gambarLevel3"></td></tr>
