--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarImitasi GM KasarTepuk Tangan.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarImitasi GM KasarTepuk Tangan.html
@@ -50,8 +50,8 @@
       <tr>
         <td colspan="3" width="100%" height="80%" align="center" id="demoVideo">
           <video id="imit" class="vid-cen" autoplay="autoplay" loop>
-            <source src="../../../../video/Acungkan Jempol.mp4" type="video/mp4">
-            <source src="../../../../video/Acungkan Jempol.ogv" type="video/ogg">
+            <source src="../../../../video/Tepuk Tangan.mp4" type="video/mp4">
+            <source src="../../../../video/Tepuk Tangan.ogv" type="video/ogg">
             Your device does not support the video tag.
           </video>
         </td>
