--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarImitasi GM HalusAcungkan Jempol.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarImitasi GM HalusAcungkan Jempol.html
@@ -21,7 +21,7 @@
         }, 1000 ); //set an interval timer up to repeat the function
 
         function skip () {
-        	window.location.href = "";
+        	window.location.href = "DasarImitasi GM HalusAcungkan Jempol.html";
         }
 	</script>
 </head>
