--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarAngka 1-20.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarAngka 1-20.html
@@ -15,6 +15,7 @@
   <script src="../../../../js/warna.js"></script>
   <script src="../../../../js/jQuery-2.1.3.min.js"></script>
   <script src="../../../../js/flowtype_height.js"></script>
+  <script src="../../../../js/flowtype.js"></script>
   <title>Cakra</title>
 </head>
 
@@ -26,19 +27,19 @@
     </div>
 
     <div id="suara2x">
-      <audio id="suara2" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 5000)" >
+      <audio id="suara2" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 5500)" >
         <source id="suara2" src="../../../../suara/terapi/indo/Angka/1.mp3" type="audio/mpeg">  
       </audio>
     </div>
 
     <div id="suara3x"> 
-      <audio id="suara3" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 6000)" >
+      <audio id="suara3" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 7500)" >
         <source id="suara3" src="../../../../suara/terapi/indo/Angka/1.mp3" type="audio/mpeg">
       </audio>
     </div>
 
     <div id="suara4x">
-      <audio id="suara4" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 7000)" >
+      <audio id="suara4" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 9500)" >
         <source id="suara4" src="../../../../suara/terapi/indo/Angka/1.mp3" type="audio/mpeg">
       </audio>
     </div>
