--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarHuruf Besar.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarHuruf Besar.html
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="../../../../js/isiterapi.js"></script>
   <script type="text/javascript" src="../../../../js/querycakra.js"></script>
   <script src="../../../../js/flowtype_height.js"></script>
+  <script src="../../../../js/flowtype.js"></script>
   
   <title>Cakra</title>
 </head>
@@ -29,19 +30,19 @@
     </div>
 
     <div id="suara2x">
-      <audio id="suara2" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 5000)" >
+      <audio id="suara2" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 5500)" >
         <source id="suara2" src="../../../../suara/terapi/indo/Huruf/A.mp3" type="audio/mpeg">  
       </audio>
     </div>
 
     <div id="suara3x"> 
-      <audio id="suara3" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 6000)" >
+      <audio id="suara3" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 7500)" >
         <source id="suara3" src="../../../../suara/terapi/indo/Huruf/A.mp3" type="audio/mpeg">
       </audio>
     </div>
 
     <div id="suara4x">
-      <audio id="suara4" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 7000)" >
+      <audio id="suara4" onloadeddata="var audioPlayer = this; setTimeout(function() { audioPlayer.play(); }, 9500)" >
         <source id="suara4" src="../../../../suara/terapi/indo/Huruf/A.mp3" type="audio/mpeg">
       </audio>
     </div>
@@ -51,6 +52,7 @@
           <!--<h1 id="demo" ></h1>-->
           <script>
             //var huruf = ["A", "B", "C"];
+
             document.getElementById("demo").innerHTML = huruf[index];
           </script>
         </td>
