--- a/www/halaman_utama/halaman_terapi/level.html
+++ b/www/halaman_utama/halaman_terapi/level.html
@@ -4,6 +4,15 @@
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<script src="../../js/jQuery-2.1.3.min.js"></script>
 	<script src="../../js/flowtype.js"></script>
+	<script type="text/javascript" src="../../cordova.js"></script>
+	<script type="text/javascript">
+		document.addEventListener("deviceready", onDeviceReady, false);
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "../kategori.html";
+	        }, false);
+	    }
+	</script>
 </head>
 <body id="halamanKategori">
 	<table width="100%" height="100%" border="0" style="border-spacing:0px;">
