--- a/www/halaman_utama/informasi.html
+++ b/www/halaman_utama/informasi.html
@@ -4,6 +4,17 @@
 	<script src="../js/jQuery-2.1.3.min.js"></script>
 	<script src="../js/flowtype.js"></script>
 	<script type="text/javascript" src="../js/info.js"></script> 
+	<script type="text/javascript" src="../cordova.js"></script>
+	<script type="text/javascript">
+
+		document.addEventListener("deviceready", onDeviceReady, false);
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "../utama.html";
+	        }, false);
+	    }
+
+	</script>
 </head>
 <body onload="main(flag)">
 		
