--- a/www/halaman_utama/kategori.html
+++ b/www/halaman_utama/kategori.html
@@ -4,7 +4,15 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<script src="../js/jQuery-2.1.3.min.js"></script>
 	<script src="../js/flowtype.js"></script>
+	<script type="text/javascript" src="../cordova.js"></script>
 	<script type="text/javascript">
+		document.addEventListener("deviceready", onDeviceReady, false);
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "../utama.html";
+	        }, false);
+	    
+		}
 		function keHalamanLevel() {
 			window.location.href = "halaman_terapi/level.html";
 		}
