--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarBinatang.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/DasarBelajarBinatang.html
@@ -11,10 +11,18 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <link rel="stylesheet" href="../../../../css/style.css" />
-  <script src="../../../../cordova.js"></script>
   <script src="../../../../js/warna.js"></script>
   <script src="../../../../js/jQuery-2.1.3.min.js"></script>
   <script src="../../../../js/flowtype_height.js"></script>
+  <script src="../../../../cordova.js"></script>
+  <script type="text/javascript">
+    document.addEventListener("deviceready", onDeviceReady, false);
+      function onDeviceReady(){
+          document.addEventListener("backbutton", function(e){
+              window.location.href = "listterapidasar.html";
+          }, false);
+      }
+  </script>
   <title>Cakra</title>
 </head>
 
