--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarBelajarBenda.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarBelajarBenda.html
@@ -26,6 +26,15 @@
         }
 
 	</script>
+	<script src="../../../../cordova.js"></script>
+	<script type="text/javascript">
+	    document.addEventListener("deviceready", onDeviceReady, false);
+	      function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	              window.location.href = "listterapidasar.html";
+	        }, false);
+	    }
+	</script>
 </head>
 <body class="halamanPetunjukTerapi">
 	<table border="0" width="100%" height="100%">
