--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarMelabelBuah.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarMelabelBuah.html
@@ -32,6 +32,15 @@
 	</script>
 	<script type="text/javascript" src="../../../../js/isiterapi.js"></script>
  	<script type="text/javascript" src="../../../../js/querycakra.js"></script>
+ 	<script src="../../../../cordova.js"></script>
+	<script type="text/javascript">
+	    document.addEventListener("deviceready", onDeviceReady, false);
+	      function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	              window.location.href = "listterapidasar.html";
+	        }, false);
+	    }
+	</script>
 </head>
 <body class="halamanPetunjukTerapi" onload="persentase(bnr,slh,idp)">
 	<table border="0" width="100%" height="100%">
