--- a/www/halaman_utama/halaman_terapi/level.html
+++ b/www/halaman_utama/halaman_terapi/level.html
@@ -12,6 +12,9 @@
 	            window.location.href = "../kategori.html";
 	        }, false);
 	    }
+	    var kosong = 0;
+	    sessionStorage.setItem('benarsimpan', kosong);
+	    sessionStorage.setItem('salahsimpan', kosong);
 	</script>
 </head>
 <body id="halamanKategori">
