--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarMelabelBuah.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/PetunjukDasarMelabelBuah.html
@@ -6,9 +6,7 @@
   
 	<script type="text/javascript">
 
-		var bnr = parseInt(sessionStorage.getItem('benarsimpan'));
-    	var slh = parseInt(sessionStorage.getItem('salahsimpan'));
-    	var idp = parseInt(sessionStorage.getItem('idterapidasar'));
+		
 
 		function flashtext(ele,col) {
             var tmpColCheck = document.getElementById( ele ).style.backgroundColor;
@@ -33,7 +31,7 @@
 	<script type="text/javascript" src="../../../../js/isiterapi.js"></script>
  	<script type="text/javascript" src="../../../../js/querycakra.js"></script>
 </head>
-<body class="halamanPetunjukTerapi" onload="persentase(bnr,slh,idp)">
+<body class="halamanPetunjukTerapi">
 	<table border="0" width="100%" height="100%">
 	  <tr>
 	    <td align="center" height="70%" width="60%" colspan="3" id="gambarmain" style="background-image: url('../../../../img/Informasi/melabel.png');">
