--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
@@ -14,13 +14,17 @@
 	        }, false);
 	    }
     
-	    var kosong = 0;
-	    sessionStorage.setItem('benarsimpan', kosong);
-	    sessionStorage.setItem('salahsimpan', kosong);
+	    var bnr = parseInt(sessionStorage.getItem('benarsimpan'));
+    	var slh = parseInt(sessionStorage.getItem('salahsimpan'));
+    	var idp = parseInt(sessionStorage.getItem('idterapidasar'));
 	    
+	    function main(){
+	    	terapi(1);
+	    	persentase(bnr,slh,idp);
+	    }
     </script>
 </head>
-<body style="width:100%;height:100%;" onload="terapi(1)">
+<body style="width:100%;height:100%;" onload="main()">
 	<table width="100%" height="100%" cellspacing="0" cellpadding="0" class="tabel_tanpa_jeda">
 		<tr>
 			<td width="40%" height="100%" class="halamanListTerapiDasar">
