--- a/www/daftar.html
+++ b/www/daftar.html
@@ -11,6 +11,14 @@
 	<script type="text/javascript" src="js/querycakra.js"></script>
 	<script src="js/app.js"></script>
 	<script type="text/javascript">
+
+		document.addEventListener("deviceready", onDeviceReady, false);
+
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "index.html";
+	        }, false);
+	    }
 		
 		function init () {
 			var isiTanggal;
