--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
@@ -5,7 +5,7 @@
 	<script src="../../../../js/flowtype.js"></script>
 	<script type="text/javascript" src="../../../../js/isiterapi.js"></script>
     <script type="text/javascript" src="../../../../js/querycakra.js"></script>
-    <script type="text/javascript" src="../cordova.js"></script>
+    <script type="text/javascript" src="../../../../cordova.js"></script>
 	<script type="text/javascript">
 		document.addEventListener("deviceready", onDeviceReady, false);
 	    function onDeviceReady(){
