--- a/www/halaman_utama/halaman_laporan/persentase.html
+++ b/www/halaman_utama/halaman_laporan/persentase.html
@@ -1,6 +1,16 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
+	<script type="text/javascript" src="../cordova.js"></script>
+	<script type="text/javascript">
+		document.addEventListener("deviceready", onDeviceReady, false);
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "../../utama.html";
+	        }, false);
+	    }
+	
+	</script>
 	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 	<script src="../../js/jQuery-2.1.3.min.js"></script>
 	<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
