--- a/www/halaman_utama/halaman_laporan/total.html
+++ b/www/halaman_utama/halaman_laporan/total.html
@@ -1,7 +1,15 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
+	<script type="text/javascript" src="../cordova.js"></script>
 	<script type="text/javascript">
+		document.addEventListener("deviceready", onDeviceReady, false);
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "../../utama.html";
+	        }, false);
+	    }
+	
 		var flag = 0;
 		function keterangan () {
 			if(flag == 0){
