--- a/www/halaman_utama/halaman_laporan/aspek.html
+++ b/www/halaman_utama/halaman_laporan/aspek.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../../css/chart.css">
-	<script type="text/javascript" src="../cordova.js"></script>
+	<script type="text/javascript" src="../../cordova.js"></script>
 	<script type="text/javascript">
 		document.addEventListener("deviceready", onDeviceReady, false);
 	    function onDeviceReady(){
