--- a/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
+++ b/www/halaman_utama/halaman_terapi/halaman_freemode/dasar/listterapidasar.html
@@ -10,7 +10,7 @@
 		document.addEventListener("deviceready", onDeviceReady, false);
 	    function onDeviceReady(){
 	        document.addEventListener("backbutton", function(e){
-	            window.location.href = "../../utama.html";
+	            window.location.href = "../../../../utama.html";
 	        }, false);
 	    }
     
