--- a/www/halaman_utama/halaman_laporan/total.html
+++ b/www/halaman_utama/halaman_laporan/total.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
-	<script type="text/javascript" src="../cordova.js"></script>
+	<script type="text/javascript" src="../../cordova.js"></script>
 	<script type="text/javascript">
 		document.addEventListener("deviceready", onDeviceReady, false);
 	    function onDeviceReady(){
