--- a/www/halaman_utama/halaman_terapi/terapi_terstruktur.html
+++ b/www/halaman_utama/halaman_terapi/terapi_terstruktur.html
@@ -3,7 +3,16 @@
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
 	<script src="../../js/jQuery-2.1.3.min.js"></script>
 	<script src="../../js/flowtype.js"></script>
+	<script type="text/javascript" src="../../cordova.js"></script>
 	<script type="text/javascript">
+		document.addEventListener("deviceready", onDeviceReady, false);
+
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "index.html";
+	        }, false);
+	    }
+	
 		var flag = 0;
 		function rincian () {
 
@@ -19,6 +28,8 @@
 		}
 		function start () {
 			document.getElementById('tombolStart').style.opacity = 0.7;
+			alert("Fitur ini tidak tersedia dalam Edisi Bronze");
+			document.getElementById('tombolStart').style.opacity = 1;
 		}
 	</script>
 </head>
