--- a/www/halaman_utama/halaman_terapi/tabel_terapi_terstruktur.html
+++ b/www/halaman_utama/halaman_terapi/tabel_terapi_terstruktur.html
@@ -1,153 +1,32 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../../css/style.css">
+	<script type="text/javascript" src="../../cordova.js"></script>
+	<script src="../../js/jQuery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="../../js/isiterapi.js"></script>
+  	<script type="text/javascript" src="../../js/querycakra.js"></script>
+	<script type="text/javascript">
+		document.addEventListener("deviceready", onDeviceReady, false);
+
+	    function onDeviceReady(){
+	        document.addEventListener("backbutton", function(e){
+	            window.location.href = "../kategori.html";
+	        }, false);
+	    }
+	    
+	</script>
 </head>
-<body>
+<body onload="AmbilTerapi()">
 	<table width="100%" border="0" height="100%">
 		<tr>
 			<td colspan="3" width="100%">
 				<div class="kontenTerapiTerstruktur">
-					<table width="100%">
-						<tr class="atributTerapiTerstruktur">
-							<td width="15%">Level</td>
-							<td width="15%">Kategori</td>
-							<td width="20%">Nama</td>
-							<td width="10%">Benar</td>
-							<td width="10%">Salah</td>
-							<td width="7%">%</td>
-							<td width="23%">Tanggal Terakhir</td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						<tr class="recordTerapiTerstruktur">
-							<td width="15%">Dasar</td>
-							<td width="15%">Identifikasi(1)</td>
-							<td width="20%">Binatang</td>
-							<td width="10%">58</td>
-							<td width="10%">1</td>
-							<td width="7%">0%</td>
-							<td width="23%"></td>
-						</tr>
-						
+					<table width="100%" id="tampilrincian">						
 					</table>
 				</div>
 			</td>
 		</tr>
 	</table>
+	
 </body>
 </html>
