--- a/www/halaman_utama/halaman_terapi/terapi_terstruktur.html
+++ b/www/halaman_utama/halaman_terapi/terapi_terstruktur.html
@@ -4,12 +4,14 @@
 	<script src="../../js/jQuery-2.1.3.min.js"></script>
 	<script src="../../js/flowtype.js"></script>
 	<script type="text/javascript" src="../../cordova.js"></script>
+	<script type="text/javascript" src="../../js/isiterapi.js"></script>
+  	<script type="text/javascript" src="../../js/querycakra.js"></script>
 	<script type="text/javascript">
 		document.addEventListener("deviceready", onDeviceReady, false);
 
 	    function onDeviceReady(){
 	        document.addEventListener("backbutton", function(e){
-	            window.location.href = "index.html";
+	            window.location.href = "../kategori.html";
 	        }, false);
 	    }
 	
