terapi terstruktur edit dikit

--- a/www/halaman_utama/halaman_terapi/terapi_terstruktur.html
+++ b/www/halaman_utama/halaman_terapi/terapi_terstruktur.html
@@ -24,7 +24,8 @@
 				flag = 1;
 			} else {
 				document.getElementById('rincianIcon').src = "../../img/Terstruktur/atas.png";
-				document.getElementById('konten').innerHTML = '<table width="100%" border="0" height="100%"><tr><td colspan="3" width="100%" height="30%" align="center" valign="bottom" style="padding-bottom:4px;"><font style="color: white;font-family:\'Segoe UI light\';font-size:15pt;">Terapi Selanjutnya : Identifikasi(1) Binatang - Dasar</font></td></tr><tr><td width="30%" height="70%"></td><td width="40%" height="70%" align="center"><div id="tombolStart" onclick="javascript:start()" class="tampilanTerapiTerstruktur"><br><br><img class="imageTerapiTerstruktur" src="../../img/Terstruktur/start.png"><br>Mulai</div></td><td width="30%" height="10%"></td></tr></table>';
+				document.getElementById('konten').innerHTML = '<table width="100%" border="0" height="100%"><tr><td colspan="3" width="100%" height="30%" align="center" valign="bottom" style="padding-bottom:4px;"><font style="color: white;font-family:\'Segoe UI light\';font-size:15pt;">Terapi Selanjutnya : Identifikasi(1) Binatang - Dasar</font></td></tr><tr><td width="30%" height="70%"></td><td width="40%" height="70%" align="center"><div id="tombolStart" onclick="javascript:start()" class="tampilanTerapiTerstruktur"><br><br><br><img class="imageTerapiTerstruktur" src="../../img/Terstruktur/start.png"><br>Mulai</div></td><td width="30%" height="70%"></td></tr></table>';
+				$('.tampilanTerapiTerstruktur').flowtype({fontRatio:15});
 				flag = 0;
 			}
 		}
@@ -48,11 +49,7 @@
 					<tr>
 						<td width="30%" height="70%"></td>
 						<td width="40%" height="70%" align="center">
-							<div id="tombolStart" onclick="javascript:start()" class="tampilanTerapiTerstruktur">
-								<img class="imageTerapiTerstruktur" src="../../img/Terstruktur/start.png">
-								<br>
-								Mulai
-							</div>
+							<div id="tombolStart" onclick="javascript:start()" class="tampilanTerapiTerstruktur"><br><br><br><img class="imageTerapiTerstruktur" src="../../img/Terstruktur/start.png"><br>Mulai</div>
 						</td>
 						<td width="30%" height="70%"></td>
 					</tr>
