--- a/www/pengaturan.html
+++ b/www/pengaturan.html
@@ -22,7 +22,7 @@
 			var delay=100; //1 seconds
 
 			setTimeout(function(){
-			  	//code
+			  	window.location.href = "akun.html";
 			}, delay);
 		}
 		function reward () {
@@ -31,7 +31,7 @@
 			var delay=100; //1 seconds
 
 			setTimeout(function(){
-			  	//code
+			  	window.location.href = "reward.html";
 			}, delay);
 		}
 	</script>
