--- a/www/akun.html
+++ b/www/akun.html
@@ -43,7 +43,7 @@
 		</style>
 	</head>
 
-	<body>
+	<body bgcolor="#000000">
 		<div class="theFrame">
 			<iframe src="db.html"></iframe>
 		</div>
@@ -63,5 +63,5 @@
 		</div>
 
 	</body>
-	
+
 </html>
