--- a/www/reward.html
+++ b/www/reward.html
@@ -183,6 +183,7 @@
 				<div>
 					<video id="vidbenar" style="display:block;">
 						<source src="video/benar.mp4">
+						<source src="video/benar.ogv">
 					</video>
 				</div>
 				
@@ -193,6 +194,7 @@
 				<div>
 					<video id="vidsalah" style="display:block;">
 						<source src="video/salah.mp4">
+						<source src="video/salah.ogv">
 					</video>
 				</div>
 			</div>
@@ -218,16 +220,16 @@
 		</div>
 
 		<audio id="benar1" preload="auto">
-			<source src="suara/Bagus.mp3">
-			<source src="suara/Bagus.wav">
+			<source src="../../../../suara/terapi/indo/Bagus.mp3">
+			<source src="../../../../suara/terapi/indo/Bagus.wav">
 		</audio>
 		<audio id="benar2" preload="auto">
-			<source src="suara/Bagus.mp3">
-			<source src="suara/Bagus.wav">
+			<source src="../../../../suara/terapi/indo/Bagus.mp3">
+			<source src="../../../../suara/terapi/indo/Bagus.wav">
 		</audio>
 		<audio id="salah1" preload="auto">
-			<source src="suara/Tidak.mp3">
-			<source src="suara/Tidak.wav">
+			<source src="../../../../suara/terapi/indo/Tidak.mp3">
+			<source src="../../../../suara/terapi/indo/Tidak.wav">
 		</audio>
 <!--
 		<script type="text/javascript">
